# timer

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
include/: timer.hpp
